[gd_scene load_steps=4 format=2]

[ext_resource path="res://pointer.gd" type="Script" id=1]
[ext_resource path="res://visor_bad.png" type="Texture" id=2]
[ext_resource path="res://visor_good.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MousePlayerRay" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="MouseMirrorRay" type="RayCast2D" parent="."]
enabled = true

[node name="LeftRay" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 16

[node name="UpRay" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 32

[node name="RightRay" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 32

[node name="DownRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 16

[node name="GoodSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="BadSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
